# gas-dynamics-numerical-solver

./: .gitignore  .gitmodules  README.md  build.sh  meson.build  setup_venv.sh  test.ipynb
cgasdynamics/: meson.build  solver.cpp
cgasdynamics/include/: solver.h
gasdynamics/: meson.build  solver.cpp
gasdynamics/include/: solver.hpp
pygasdynamics/: .gitignore  __init__.py  solver.py
